[gd_scene load_steps=7 format=3 uid="uid://fajivgoriugi"]

[ext_resource type="Script" path="res://scripts/generic/Entity.gd" id="1_77en6"]
[ext_resource type="PackedScene" uid="uid://bcsqev2e0pnu" path="res://objects/abilities/selfdestruct.tscn" id="2_3g8ij"]
[ext_resource type="Script" path="res://scripts/abstract/Stat.gd" id="2_ttffq"]
[ext_resource type="Texture2D" uid="uid://6i8qff0kq7ei" path="res://art/character ph/enemy ph.png" id="3_na1fc"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jucqc"]
radius = 5.74163
height = 21.0526

[sub_resource type="CircleShape2D" id="CircleShape2D_uaxf4"]
radius = 20.0998

[node name="runner" type="CharacterBody2D" node_paths=PackedStringArray("abilities")]
y_sort_enabled = true
disable_mode = 1
motion_mode = 1
slide_on_ceiling = false
wall_min_slide_angle = 0.0
platform_wall_layers = 15
script = ExtResource("1_77en6")
entityName = "Kamikaze"
team = 2
objPath = "res://objects/characters/runner_enemy.tscn"
controllerPath = "res://objects/controllers/runner_ai.tscn"
aggroPriority = 1
healthBarColor = Color(1, 0.2, 0.2, 1)
abilities = [NodePath("Selfdestruct")]

[node name="Selfdestruct" parent="." instance=ExtResource("2_3g8ij")]

[node name="stat_speed" type="Node" parent="."]
script = ExtResource("2_ttffq")
baseValue = 400.0

[node name="stat_maxHp" type="Node" parent="."]
script = ExtResource("2_ttffq")
baseValue = 20.0

[node name="stat_accel" type="Node" parent="."]
script = ExtResource("2_ttffq")
baseValue = 2.0

[node name="stat_aggroRange" type="Node" parent="."]
script = ExtResource("2_ttffq")
baseValue = 5000.0

[node name="shoulder" type="Node2D" parent="."]
position = Vector2(-1, -64)

[node name="upright_anchor" type="Node2D" parent="." groups=["upright_sprite"]]
y_sort_enabled = true
position = Vector2(0, 3.8147e-06)

[node name="sprite" type="Sprite2D" parent="upright_anchor"]
modulate = Color(1, 0.2, 0, 1)
texture_filter = 1
scale = Vector2(0.575, 0.575)
texture = ExtResource("3_na1fc")
offset = Vector2(0, -89.58)

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(5.225, 5.225)

[node name="hitbox_collision" type="CollisionShape2D" parent="Area2D"]
position = Vector2(5.96046e-08, -10.3349)
shape = SubResource("CapsuleShape2D_jucqc")

[node name="movement_collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -20)
shape = SubResource("CircleShape2D_uaxf4")
debug_color = Color(0.772432, 0.263693, 0.879854, 0.42)
